# xCaliber

./: .gitignore  LICENSE-2.0  README.md  TODO.md  co-design.md  ff1_w4a4_swiglu_topk_reduce.cu  kernel.cu  kernel0.cu  kernel_bank_map.txt  kernel_sol.cu  notes.md  ptx.inl  xR57F1.cu  xRR48_sm12x.cu  xRR48_sm12x_sideband.cu  xff1sm12x copy.cuh  xff1sm12x.cuh
ablations/: l2pfwaitisoresults.csv
experiments/: README.md  actl2absorbresults.csv  combined.csv  ff1_w4a4_scattered_codesign.cu  ff1_w4a4_scattered_combined.csv  ff1_w4a4_scattered_exp.py  ff1_w4a4_scattered_summary.csv  ff1_w4a4_swiglu_topk_reduce_combined.csv  ff1_w4a4_swiglu_topk_reduce_exp.py  ff1_w4a4_swiglu_topk_reduce_mech.cu  ff1_w4a4_swiglu_topk_reduce_mech_actreg.cu  ff1_w4a4_swiglu_topk_reduce_mech_actreg_combined.csv  ff1_w4a4_swiglu_topk_reduce_mech_actreg_exp.py  ff1_w4a4_swiglu_topk_reduce_mech_actreg_n256pf.cu  ff1_w4a4_swiglu_topk_reduce_mech_actreg_n256pf_combined.csv  ff1_w4a4_swiglu_topk_reduce_mech_actreg_n256pf_comparison.csv  ff1_w4a4_swiglu_topk_reduce_mech_actreg_n256pf_exp.py  ff1_w4a4_swiglu_topk_reduce_mech_actreg_n256pf_summary.csv  ff1_w4a4_swiglu_topk_reduce_mech_actreg_n8h128.cu  ff1_w4a4_swiglu_topk_reduce_mech_actreg_n8h128_combined.csv  ff1_w4a4_swiglu_topk_reduce_mech_actreg_n8h128_exp.py  ff1_w4a4_x57.cu  l2pfAct.cu  (+29 more)
xFused-XXXX-Kernels/xMoE/xW4A16/sm75/xR64/vllm/: README.md  pyproject.toml  setup.py
xFused-XXXX-Kernels/xMoE/xW4A16/sm75/xR64/vllm/csrc/: xr64_abs_bridge.cu
xFused-XXXX-Kernels/xMoE/xW4A16/sm75/xR64/vllm/xcaliber_int4_vllm/: __init__.py  method.py  plugin.py
(+46 files in other folders)
